package Code;

//TODO: Design GUI
public class EndlessGame extends Game {
    //TODO: Endless Game Constructor
    public EndlessGame(int previousHighScore) {
        super(previousHighScore);
    }
    //TODO: Update Game State Function
    @Override
    public void updateGameState() {
    }
    //TODO: Save Game State Function
    @Override
    public void saveGameData() {
    }
}
