package Code;

import javafx.scene.control.Button;
import javafx.scene.control.Label;

//TODO: Design GUI
public class MainMenu {
    private Button startEndlessButton;
    private Label endlessHighScoreLabel;

    //TODO: Main Menu Constructor
    public MainMenu() {
    }
    //TODO: Start Endless Mode Function [On Click of Button]
    public void startEndlessMode() {
    }
    //TODO: Load High Score Function [On Starting to display]
    private void loadHighScoreData() {
    }
    //TODO: Select Save File Function [On Click of Button]
    private void selectSaveFile() {
    }

}
